--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>mapstruct</artifactId>
 			<version>${mapstruct-version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
